--- a/musicmis/views/delrs.html
+++ b/musicmis/views/delrs.html
@@ -1,7 +1,7 @@
 {% extends './common-layout.html' %}
 
 {% block operate %}
-	{% if rs.affectedRows > 0 %}
+	{% if delrs.affectedRows > 0 %}
 	  操作成功!
 	{% endif %}
 {% endblock %}
