--- a/musicmis/views/menu.html
+++ b/musicmis/views/menu.html
@@ -1,4 +1,4 @@
-<div class="menu">
+<div class="menu" style="width:200px;float:left;">
 	<ul>
 		<li><a href="/singer">歌手模块</a></li>
 		<li><a href="/music">音乐模块</a></li>
